fixtures/invalid/bad-depends-on-target.lmk
@depends-on target="../secret"
Dependency targets must be lowercase slugs.
